src/objects/cadmus_core__Data_Source__c.object
<CustomObject>
    <fields>
        <fullName>cadmus_core__CustomerDataSourceId__c</fullName>
        <formula>IF( ISBLANK(cadmus_core__Migrated_Customer_Data_Source_Id__c)
,IF(
    ISBLANK(cadmus_core__Migrated_Customer_Data_Source_Id_2__c)
    , $Organization.Id + &apos;_&apos; + Id
    , cadmus_core__Migrated_Customer_Data_Source_Id_2__c 
  )
, cadmus_core__Migrated_Customer_Data_Source_Id__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Data Source Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Grouping_Field_Name__c</fullName>
        <inlineHelpText>Field that is used in this Data Source WHERE clause. Used for mapping this child Data Source to the correct parent Data Source. Also use this field in your SELECT!</inlineHelpText>
        <label>Grouping Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Grouping_Field_Type__c</fullName>
        <inlineHelpText>Use Id when the Grouping Field is always of type &apos;Id&apos;, otherwise choose &apos;Object&apos;</inlineHelpText>
        <label>Grouping Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Id</fullName>
                    <default>true</default>
                    <label>Id</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cadmus_core__Image_Name__c</fullName>
        <inlineHelpText>The name of the image you want to include. This is dependent of the image source.
Attachment: Title (File Name)
Document: Unique name
Files: Name</inlineHelpText>
        <label>Image Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Image_source__c</fullName>
        <label>Image source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>ATTACHMENTS</fullName>
                </value>
                <value>
                    <fullName>DOCUMENTS</fullName>
                </value>
                <value>
                    <fullName>FILES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cadmus_core__JSON__c</fullName>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Migrated_Customer_Data_Source_Id_2__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>If you migrate a datasource from another Org or a Sandbox, use this field to copy the Datasource Id from that other Org/Sandbox</description>
        <externalId>true</externalId>
        <label>Migrated Customer Data Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cadmus_core__Migrated_Customer_Data_Source_Id__c</fullName>
        <description>THIS FIELD IS DEPRECATED AS THE UNIQUENESS WAS CASE INSENSITIVE
If you migrate a datasource from another Org or a Sandbox, use this field to copy the Datasource Id from that other Org/Sandbox</description>
        <label>DEPRECATED-Migrated Cust Data Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cadmus_core__Parent_Data_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Data Source</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Data Sources</relationshipLabel>
        <relationshipName>Data_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Parent_Query_Field_Name__c</fullName>
        <inlineHelpText>Reference to the field in the parent Data Source. This field needs to be included in the SELECT of the Parents Data Source</inlineHelpText>
        <label>Parent Query Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__SOQL_Builder_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates to the user that this datasource was originally created with the SOQL Builder</description>
        <inlineHelpText>If the SOQL was originally built via the SOQL Builder, then take care when you edit in the SOQL window directly! Best edit either in SOQL Builder or directly write your own SOQL</inlineHelpText>
        <label>SOQL Builder Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_core__SOQL__c</fullName>
        <defaultValue>&quot;SELECT Id FROM Account WHERE Id = :recordId&quot;</defaultValue>
        <inlineHelpText>Write a SOQL query to retrieve the data that will be used in the templates. You can make use of :recordId to have the starting Id. E.g. SELECT Id, Name FROM Opportunity WHERE Id = :recordId</inlineHelpText>
        <label>SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Static_Data_JSON__c</fullName>
        <label>Static Data JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Translation_Object__c</fullName>
        <label>Translation Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Translation_Picklist__c</fullName>
        <label>Translation Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Type__c</fullName>
        <inlineHelpText>Select the correct type the SOQL will return. E.g. When using LIMIT 1 at the end of the SOQL it should always be &apos;Single sObject&apos;, otherwise select &apos;List of sObjects&apos;.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List of sObjects</fullName>
                    <default>true</default>
                    <label>List of sObjects</label>
                </value>
                <value>
                    <fullName>Single sObject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Source</label>
    <listViews>
        <fullName>cadmus_core__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>cadmus_core__Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>cadmus_core__SOQL_Builder_Managed__c</columns>
        <columns>cadmus_core__Parent_Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sources</pluralLabel>
    <recordTypes>
        <fullName>cadmus_core__KEYVALUE</fullName>
        <active>true</active>
        <label>KEYVALUE</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__PICKLIST_TRANSLATION</fullName>
        <active>true</active>
        <label>PICKLIST TRANSLATION</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__PICTURE_LIST</fullName>
        <active>true</active>
        <description>Type for adding sending dynamic pictures to PDF Butler</description>
        <label>PICTURE LIST</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__SOQL</fullName>
        <active>true</active>
        <label>SOQL</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__STATIC_VALUES</fullName>
        <active>true</active>
        <label>STATIC VALUES</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cadmus_core__RecordTypeCannotBeNull</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId  = null</errorConditionFormula>
        <errorMessage>Please select a valid RecordType. If none are presented, make sure you have done step 1 and 2 of the &quot;Get Started&quot; tab. The permissions on the Data Source SObject are not correct and you must grant access to the Record Types.</errorMessage>
    </validationRules>
</CustomObject>